@@ -1,11 +1,10 @@
 package br.com.arquitetura.spring.jpa.controllers;
 
+import br.com.arquitetura.spring.jpa.dtos.CardListResponseDto;
+import br.com.arquitetura.spring.jpa.dtos.PokemonListResponseDto;
 import br.com.arquitetura.spring.jpa.dtos.PokemonRecordDto;
 import br.com.arquitetura.spring.jpa.dtos.PokemonResponseDto;
-import br.com.arquitetura.spring.jpa.dtos.SearchRecordDto;
 import br.com.arquitetura.spring.jpa.globals.exceptionhandler.ResourceNotFoundException;
-import br.com.arquitetura.spring.jpa.models.CardModel;
-import br.com.arquitetura.spring.jpa.models.DomainModel;
 import br.com.arquitetura.spring.jpa.models.PokemonModel;
 import br.com.arquitetura.spring.jpa.services.PokemonService;
 import jakarta.validation.Valid;
@@ -20,40 +19,30 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api")
 public class PokemonController {
-    private static final String ERROR_POKEMON_ID_NOTFOUND = "error.pokemon.id.notfound";
     private final PokemonService pokemonService;
-    private final MessageSource messageSource;
 
-    public PokemonController(PokemonService pokemonService, MessageSource messageSource) {
+    public PokemonController(PokemonService pokemonService) {
         this.pokemonService = pokemonService;
-        this.messageSource = messageSource;
     }
 
     @GetMapping("/pokemon")
     public ResponseEntity<List<PokemonResponseDto>> getAllPokemons() {
         List<PokemonModel> pokemons = pokemonService.getAllPokemons();
-        return ResponseEntity.ok(mapToPokemonListResponseDto(pokemons));
+        List<PokemonResponseDto> pokemonsDto = pokemons.stream()
+                .map(this::mapToPokemonResponseDto)
+                .toList();
+
+        return new ResponseEntity<>(pokemonsDto, HttpStatus.OK);
     }
 
-    @GetMapping ("/pokemon/{id}")
+    @GetMapping("/pokemon/{id}")
     public ResponseEntity<PokemonResponseDto> getOnePokemon(@PathVariable(value = "id") Long id, Locale locale) {
-        Optional<PokemonModel> pokemonOptional = pokemonService.getOnePokemon(id);
-        if (pokemonOptional.isEmpty()) {
-            throw ResourceNotFoundException.withMessage(
-                    messageSource, ERROR_POKEMON_ID_NOTFOUND,
-                    new Object[]{id},
-                    locale
-            );
-        }
-
-        PokemonModel pokemon = pokemonOptional.get();
+        PokemonModel pokemon = pokemonService.getOnePokemon(id, locale);
 
         return ResponseEntity.ok(mapToPokemonResponseDto(pokemon));
     }
@@ -75,10 +64,10 @@ public class PokemonController {
     }
 
     @PostMapping("/pokemon")
-    public ResponseEntity<PokemonResponseDto> savePokemon(@RequestBody @Valid PokemonRecordDto pokemonRecordDto) {
+    public ResponseEntity<PokemonResponseDto> savePokemon(@RequestBody @Valid PokemonRecordDto pokemonRecordDto, Locale locale) {
         var pokemonModel = new PokemonModel();
         BeanUtils.copyProperties(pokemonRecordDto, pokemonModel);
-        PokemonModel savePokemon = pokemonService.savePokemon(pokemonModel);
+        PokemonModel savePokemon = pokemonService.savePokemon(pokemonModel, locale);
 
         return ResponseEntity.status(HttpStatus.CREATED).body(mapToPokemonResponseDto(savePokemon));
     }
@@ -88,46 +77,17 @@ public class PokemonController {
             @PathVariable(value = "id") Long id,
             @RequestBody @Valid PokemonRecordDto pokemonRecordDto,
             Locale locale) {
-        Optional<PokemonModel> pokemonOptional = pokemonService.getOnePokemon(id);
-        if (pokemonOptional.isEmpty()) {
-            throw ResourceNotFoundException.withMessage(
-                    messageSource, ERROR_POKEMON_ID_NOTFOUND,
-                    new Object[]{id},
-                    locale
-            );
-        }
-        var pokemonModel = pokemonOptional.get();
+        PokemonModel pokemonModel = pokemonService.getOnePokemon(id, locale);
         BeanUtils.copyProperties(pokemonRecordDto, pokemonModel);
-        PokemonModel updatePokemon = pokemonService.updatePokemon(pokemonModel);
+        PokemonModel updatePokemon = pokemonService.updatePokemon(pokemonModel, locale);
 
         return ResponseEntity.status(HttpStatus.OK).body(mapToPokemonResponseDto(updatePokemon));
     }
 
-    @GetMapping("/pokemon/{search}")
-    public ResponseEntity<Page<PokemonResponseDto>> searchPokemon(
-            @PathVariable(value = "search") String search,
-            @RequestParam(defaultValue = "0") int page,
-            @RequestParam(defaultValue = "10") int size,
-            @RequestParam(defaultValue = "numPokemon") String sort,
-            @RequestParam(defaultValue = "asc") String order,
-            Locale locale) {
-        Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.fromString(order), sort));
-        Page<PokemonModel> pokemonModels = pokemonService.searchPokemon(search, pageable, locale);
-
-        return ResponseEntity.ok(pokemonModels.map(this::mapToPokemonResponseDto));
-    }
 
     @DeleteMapping("/pokemon/{id}")
     public ResponseEntity<Object> deletePokemon(@PathVariable(value = "id") Long id, Locale locale) {
-        Optional<PokemonModel> pokemonOptional = pokemonService.getOnePokemon(id);
-        if (pokemonOptional.isEmpty()) {
-            throw ResourceNotFoundException.withMessage(
-                    messageSource, ERROR_POKEMON_ID_NOTFOUND,
-                    new Object[]{id},
-                    locale
-            );
-        }
-        pokemonService.deletePokemon(pokemonOptional.get().getIdPokemon());
+        pokemonService.deletePokemon(id, locale);
 
         Map<String, String> response = new HashMap<>();
         response.put("message", "Pokemon deleted successfully");
@@ -162,9 +122,23 @@ public class PokemonController {
         );
     }
 
-    private List<PokemonResponseDto> mapToPokemonListResponseDto(List<PokemonModel> pokemonModels) {
-        return pokemonModels.stream()
-                .map(this::mapToPokemonResponseDto)
-                .collect(Collectors.toList());
+    private PokemonListResponseDto mapToPokemonListResponseDto(PokemonModel pokemonModel) {
+        List<CardListResponseDto> cards = pokemonModel.getCardModels().stream()
+                .map(item -> new CardListResponseDto(
+                        item.getIdCard(),
+                        item.getNameCard(),
+                        item.getCollection(),
+                        item.getNumberCard()
+                ))
+                .toList();
+
+        return new PokemonListResponseDto(
+                pokemonModel.getIdPokemon(),
+                pokemonModel.getName(),
+                pokemonModel.getNumPokemon(),
+                pokemonModel.getPrimaryType(),
+                pokemonModel.getSecondaryType(),
+                cards
+        );
     }
 }
